--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,5 +8,4 @@ edition = "2021"
 [dependencies]
 clap = { version = "3.2.17", features = ["derive"] }
 xml_oxide = "0.3.0"
-mysql = "*"
-dotenv = "0.15.0"
+cairis_core = {path = "../cairis_core"}
